parser/generated/TntParser.ts
// Generated from ./src/parser/generated/Tnt.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { TntListener } from "./TntListener";
import { TntVisitor } from "./TntVisitor";


export class TntParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly STRING = 40;
	public static readonly BOOL = 41;
	public static readonly INT = 42;
	public static readonly AND = 43;
	public static readonly OR = 44;
	public static readonly IFF = 45;
	public static readonly IMPLIES = 46;
	public static readonly SUBSETEQ = 47;
	public static readonly IN = 48;
	public static readonly NOTIN = 49;
	public static readonly PRIVATE = 50;
	public static readonly ADD = 51;
	public static readonly SUB = 52;
	public static readonly MUL = 53;
	public static readonly DIV = 54;
	public static readonly MOD = 55;
	public static readonly GT = 56;
	public static readonly LT = 57;
	public static readonly GE = 58;
	public static readonly LE = 59;
	public static readonly NE = 60;
	public static readonly EQEQ = 61;
	public static readonly EQ = 62;
	public static readonly ASGN = 63;
	public static readonly REC = 64;
	public static readonly IDENTIFIER = 65;
	public static readonly LINE_COMMENT = 66;
	public static readonly COMMENT = 67;
	public static readonly WS = 68;
	public static readonly RULE_module = 0;
	public static readonly RULE_unit = 1;
	public static readonly RULE_valDef = 2;
	public static readonly RULE_operDef = 3;
	public static readonly RULE_instanceDef = 4;
	public static readonly RULE_params = 5;
	public static readonly RULE_type = 6;
	public static readonly RULE_typeUnionRecOne = 7;
	public static readonly RULE_untyped012 = 8;
	public static readonly RULE_untyped01 = 9;
	public static readonly RULE_untyped0 = 10;
	public static readonly RULE_expr = 11;
	public static readonly RULE_lambda = 12;
	public static readonly RULE_identOrHole = 13;
	public static readonly RULE_arg_list = 14;
	public static readonly RULE_name_after_dot = 15;
	public static readonly RULE_operator = 16;
	public static readonly RULE_literal = 17;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"module", "unit", "valDef", "operDef", "instanceDef", "params", "type", 
		"typeUnionRecOne", "untyped012", "untyped01", "untyped0", "expr", "lambda", 
		"identOrHole", "arg_list", "name_after_dot", "operator", "literal",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'module'", "'extends'", "','", "'end'", "'const'", "':'", 
		"'var'", "'assume'", "'_'", "'pred'", "'action'", "'temporal'", "'typedef'", 
		"'val'", "'def'", "'instance'", "'with'", "'<-'", "'('", "')'", "'->'", 
		"'=>'", "'set'", "'seq'", "'{'", "'}'", "'int'", "'str'", "'bool'", "'|'", 
		"'.'", "'['", "']'", "'^'", "'if'", "'else'", "'case'", "'&'", "'''", 
		undefined, undefined, undefined, "'and'", "'or'", "'iff'", "'implies'", 
		"'subseteq'", "'in'", "'notin'", "'private'", "'+'", "'-'", "'*'", "'/'", 
		"'%'", "'>'", "'<'", "'>='", "'<='", "'!='", "'=='", "'='", "':='", "'rec'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "STRING", "BOOL", 
		"INT", "AND", "OR", "IFF", "IMPLIES", "SUBSETEQ", "IN", "NOTIN", "PRIVATE", 
		"ADD", "SUB", "MUL", "DIV", "MOD", "GT", "LT", "GE", "LE", "NE", "EQEQ", 
		"EQ", "ASGN", "REC", "IDENTIFIER", "LINE_COMMENT", "COMMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(TntParser._LITERAL_NAMES, TntParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return TntParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Tnt.g4"; }

	// @Override
	public get ruleNames(): string[] { return TntParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return TntParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(TntParser._ATN, this);
	}
	// @RuleVersion(0)
	public module(): ModuleContext {
		let _localctx: ModuleContext = new ModuleContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, TntParser.RULE_module);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 36;
			this.match(TntParser.T__0);
			this.state = 37;
			this.match(TntParser.IDENTIFIER);
			this.state = 42;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === TntParser.T__1) {
				{
				this.state = 38;
				this.match(TntParser.T__1);
				this.state = 39;
				this.match(TntParser.IDENTIFIER);
				{
				this.state = 40;
				this.match(TntParser.T__2);
				this.state = 41;
				this.match(TntParser.IDENTIFIER);
				}
				}
			}

			this.state = 47;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 1)) & ~0x1F) === 0 && ((1 << (_la - 1)) & ((1 << (TntParser.T__0 - 1)) | (1 << (TntParser.T__4 - 1)) | (1 << (TntParser.T__6 - 1)) | (1 << (TntParser.T__7 - 1)) | (1 << (TntParser.T__9 - 1)) | (1 << (TntParser.T__10 - 1)) | (1 << (TntParser.T__11 - 1)) | (1 << (TntParser.T__12 - 1)) | (1 << (TntParser.T__13 - 1)) | (1 << (TntParser.T__14 - 1)) | (1 << (TntParser.T__15 - 1)) | (1 << (TntParser.T__18 - 1)) | (1 << (TntParser.T__24 - 1)) | (1 << (TntParser.T__29 - 1)) | (1 << (TntParser.T__31 - 1)))) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (TntParser.T__33 - 34)) | (1 << (TntParser.T__34 - 34)) | (1 << (TntParser.T__36 - 34)) | (1 << (TntParser.T__37 - 34)) | (1 << (TntParser.STRING - 34)) | (1 << (TntParser.BOOL - 34)) | (1 << (TntParser.INT - 34)) | (1 << (TntParser.AND - 34)) | (1 << (TntParser.OR - 34)) | (1 << (TntParser.IFF - 34)) | (1 << (TntParser.IMPLIES - 34)) | (1 << (TntParser.SUBSETEQ - 34)) | (1 << (TntParser.IN - 34)) | (1 << (TntParser.NOTIN - 34)) | (1 << (TntParser.PRIVATE - 34)) | (1 << (TntParser.ADD - 34)) | (1 << (TntParser.SUB - 34)) | (1 << (TntParser.MUL - 34)) | (1 << (TntParser.DIV - 34)) | (1 << (TntParser.MOD - 34)) | (1 << (TntParser.GT - 34)) | (1 << (TntParser.LT - 34)) | (1 << (TntParser.GE - 34)) | (1 << (TntParser.LE - 34)) | (1 << (TntParser.NE - 34)) | (1 << (TntParser.EQEQ - 34)) | (1 << (TntParser.EQ - 34)) | (1 << (TntParser.ASGN - 34)) | (1 << (TntParser.IDENTIFIER - 34)))) !== 0)) {
				{
				{
				this.state = 44;
				this.unit();
				}
				}
				this.state = 49;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 50;
			this.match(TntParser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public unit(): UnitContext {
		let _localctx: UnitContext = new UnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, TntParser.RULE_unit);
		let _la: number;
		try {
			this.state = 107;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				_localctx = new ConstContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 52;
				this.match(TntParser.T__4);
				this.state = 53;
				this.match(TntParser.IDENTIFIER);
				this.state = 54;
				this.match(TntParser.T__5);
				this.state = 57;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
				case 1:
					{
					this.state = 55;
					this.untyped01();
					}
					break;

				case 2:
					{
					this.state = 56;
					this.type(0);
					}
					break;
				}
				}
				break;

			case 2:
				_localctx = new VarContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 59;
				this.match(TntParser.T__6);
				this.state = 60;
				this.match(TntParser.IDENTIFIER);
				this.state = 61;
				this.match(TntParser.T__5);
				this.state = 64;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
				case 1:
					{
					this.state = 62;
					this.untyped0();
					}
					break;

				case 2:
					{
					this.state = 63;
					this.type(0);
					}
					break;
				}
				}
				break;

			case 3:
				_localctx = new AssumeContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 66;
				this.match(TntParser.T__7);
				this.state = 67;
				_la = this._input.LA(1);
				if (!(_la === TntParser.T__8 || _la === TntParser.IDENTIFIER)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 68;
				this.match(TntParser.EQ);
				this.state = 69;
				this.expr(0);
				}
				break;

			case 4:
				_localctx = new ValContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 71;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TntParser.PRIVATE) {
					{
					this.state = 70;
					this.match(TntParser.PRIVATE);
					}
				}

				this.state = 73;
				this.valDef();
				}
				break;

			case 5:
				_localctx = new OperContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TntParser.PRIVATE) {
					{
					this.state = 74;
					this.match(TntParser.PRIVATE);
					}
				}

				this.state = 77;
				this.operDef();
				}
				break;

			case 6:
				_localctx = new PatContext(_localctx);
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 79;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TntParser.PRIVATE) {
					{
					this.state = 78;
					this.match(TntParser.PRIVATE);
					}
				}

				this.state = 81;
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << TntParser.T__9) | (1 << TntParser.T__10) | (1 << TntParser.T__11))) !== 0))) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 82;
				this.match(TntParser.IDENTIFIER);
				this.state = 84;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TntParser.T__18) {
					{
					this.state = 83;
					this.params();
					}
				}

				this.state = 91;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === TntParser.T__5) {
					{
					this.state = 86;
					this.match(TntParser.T__5);
					this.state = 89;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
					case 1:
						{
						this.state = 87;
						this.untyped012();
						}
						break;

					case 2:
						{
						this.state = 88;
						this.type(0);
						}
						break;
					}
					}
				}

				this.state = 93;
				this.match(TntParser.EQ);
				this.state = 94;
				this.expr(0);
				}
				break;

			case 7:
				_localctx = new ModuleNestedContext(_localctx);
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 95;
				this.module();
				}
				break;

			case 8:
				_localctx = new InstanceContext(_localctx);
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 96;
				this.instanceDef();
				}
				break;

			case 9:
				_localctx = new TypeDefContext(_localctx);
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 97;
				this.match(TntParser.T__12);
				this.state = 98;
				this.match(TntParser.IDENTIFIER);
				this.state = 99;
				this.match(TntParser.EQ);
				this.state = 100;
				this.type(0);
				}
				break;

			case 10:
				_localctx = new ErrorCaseContext(_localctx);
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 104;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case TntParser.IDENTIFIER:
					{
					this.state = 101;
					this.match(TntParser.IDENTIFIER);
					}
					break;
				case TntParser.T__18:
				case TntParser.T__24:
				case TntParser.T__29:
				case TntParser.T__31:
				case TntParser.T__33:
				case TntParser.T__34:
				case TntParser.T__36:
				case TntParser.T__37:
				case TntParser.AND:
				case TntParser.OR:
				case TntParser.IFF:
				case TntParser.IMPLIES:
				case TntParser.SUBSETEQ:
				case TntParser.IN:
				case TntParser.NOTIN:
				case TntParser.ADD:
				case TntParser.SUB:
				case TntParser.MUL:
				case TntParser.DIV:
				case TntParser.MOD:
				case TntParser.GT:
				case TntParser.LT:
				case TntParser.GE:
				case TntParser.LE:
				case TntParser.NE:
				case TntParser.EQEQ:
				case TntParser.EQ:
				case TntParser.ASGN:
					{
					this.state = 102;
					this.operator();
					}
					break;
				case TntParser.STRING:
				case TntParser.BOOL:
				case TntParser.INT:
					{
					this.state = 103;
					this.literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}

				         this.notifyErrorListeners("TNT001: expected a const, var, def, typedef, etc.");
				                
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public valDef(): ValDefContext {
		let _localctx: ValDefContext = new ValDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, TntParser.RULE_valDef);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this.match(TntParser.T__13);
			this.state = 110;
			this.match(TntParser.IDENTIFIER);
			this.state = 116;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === TntParser.T__5) {
				{
				this.state = 111;
				this.match(TntParser.T__5);
				this.state = 114;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
				case 1:
					{
					this.state = 112;
					this.untyped0();
					}
					break;

				case 2:
					{
					this.state = 113;
					this.type(0);
					}
					break;
				}
				}
			}

			this.state = 118;
			this.match(TntParser.EQ);
			this.state = 119;
			this.expr(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public operDef(): OperDefContext {
		let _localctx: OperDefContext = new OperDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, TntParser.RULE_operDef);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			this.match(TntParser.T__14);
			this.state = 123;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === TntParser.REC) {
				{
				this.state = 122;
				this.match(TntParser.REC);
				}
			}

			this.state = 125;
			this.match(TntParser.IDENTIFIER);
			this.state = 126;
			this.params();
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === TntParser.T__5) {
				{
				this.state = 127;
				this.match(TntParser.T__5);
				this.state = 130;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 15, this._ctx) ) {
				case 1:
					{
					this.state = 128;
					this.untyped012();
					}
					break;

				case 2:
					{
					this.state = 129;
					this.type(0);
					}
					break;
				}
				}
			}

			this.state = 134;
			this.match(TntParser.EQ);
			this.state = 135;
			this.expr(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instanceDef(): InstanceDefContext {
		let _localctx: InstanceDefContext = new InstanceDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, TntParser.RULE_instanceDef);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			this.match(TntParser.T__15);
			this.state = 138;
			_la = this._input.LA(1);
			if (!(_la === TntParser.T__8 || _la === TntParser.IDENTIFIER)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 139;
			this.match(TntParser.EQ);
			this.state = 140;
			this.match(TntParser.IDENTIFIER);
			this.state = 154;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === TntParser.T__16) {
				{
				this.state = 141;
				this.match(TntParser.T__16);
				this.state = 142;
				this.match(TntParser.IDENTIFIER);
				this.state = 143;
				this.match(TntParser.T__17);
				this.state = 144;
				this.expr(0);
				this.state = 151;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === TntParser.T__2) {
					{
					{
					this.state = 145;
					this.match(TntParser.T__2);
					this.state = 146;
					this.match(TntParser.IDENTIFIER);
					this.state = 147;
					this.match(TntParser.T__17);
					this.state = 148;
					this.expr(0);
					}
					}
					this.state = 153;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public params(): ParamsContext {
		let _localctx: ParamsContext = new ParamsContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, TntParser.RULE_params);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			this.match(TntParser.T__18);
			this.state = 165;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === TntParser.IDENTIFIER) {
				{
				this.state = 157;
				this.match(TntParser.IDENTIFIER);
				this.state = 162;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === TntParser.T__2) {
					{
					{
					this.state = 158;
					this.match(TntParser.T__2);
					this.state = 159;
					this.match(TntParser.IDENTIFIER);
					}
					}
					this.state = 164;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 167;
			this.match(TntParser.T__19);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public type(): TypeContext;
	public type(_p: number): TypeContext;
	// @RuleVersion(0)
	public type(_p?: number): TypeContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: TypeContext = new TypeContext(this._ctx, _parentState);
		let _prevctx: TypeContext = _localctx;
		let _startState: number = 12;
		this.enterRecursionRule(_localctx, 12, TntParser.RULE_type, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 235;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 26, this._ctx) ) {
			case 1:
				{
				_localctx = new TypeOperContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 170;
				this.match(TntParser.T__18);
				this.state = 179;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << TntParser.T__18) | (1 << TntParser.T__22) | (1 << TntParser.T__23) | (1 << TntParser.T__24) | (1 << TntParser.T__26) | (1 << TntParser.T__27) | (1 << TntParser.T__28) | (1 << TntParser.T__29))) !== 0) || _la === TntParser.IDENTIFIER) {
					{
					this.state = 171;
					this.type(0);
					this.state = 176;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === TntParser.T__2) {
						{
						{
						this.state = 172;
						this.match(TntParser.T__2);
						this.state = 173;
						this.type(0);
						}
						}
						this.state = 178;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 181;
				this.match(TntParser.T__19);
				this.state = 182;
				this.match(TntParser.T__21);
				this.state = 183;
				this.type(11);
				}
				break;
